# compliance-sentinel

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  DIRECT_MCP_SETUP.md  Dockerfile  EDITOR_MCP_CONFIGS.md  EDITOR_SETUP_GUIDE.md  FINAL_TEST_REPORT.md  FREE_DEPLOYMENT_GUIDE.md  HEROKU_DEPLOY.md  MCP_README.md  MCP_SETUP_GUIDE.md  MCP_VERCEL_SETUP.md  Procfile  README.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TEAM_SHARING_GUIDE.md  VERCEL_DEPLOY.md  analysis_results.json  app.json  comprehensive_security_test.py  deploy_heroku.sh  deploy_vercel.sh  docker-compose.prod.yml  docker-compose.yml  documentation.md  final_test.py  fix_syntax_errors.py  fly.toml  mcp_config.json  mcp_server.py  mcp_wrapper.py  minimal_test.py  pyproject.toml  pytest.ini  quick_fix.py  railway.json  render.yaml  requirements-minimal.txt  (+27 more)
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
.kiro/compliance-sentinel/: hooks.yaml
.kiro/settings/: mcp.json
.kiro/steering/: security.md  security_simple.md
api/: index.py  mcp.py
compliance_sentinel/: __init__.py  cli.py
compliance_sentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
compliance_sentinel/analyzers/: __init__.py  api_analyzer.py  bandit_analyzer.py  builtin_analyzer.py  cloud_analyzer.py  compliance_analyzer.py  coordinator.py  crypto_analyzer.py  ml_threat_detector.py  multi_language_coordinator.py  semgrep_analyzer.py  supply_chain_analyzer.py
compliance_sentinel/ci_cd/: README.md  __init__.py  azure_devops.py  deployment_validator.py  github_actions.py  gitlab_ci.py  jenkins_plugin.py  security_gate.py
compliance_sentinel/cicd_integration/: __init__.py
compliance_sentinel/cli/: __init__.py  __main__.py  analyze_command.py  config_commands.py  hook_commands.py
compliance_sentinel/config/: README.md  __init__.py  config_manager.py  dynamic_config.py  secret_config.py  validator.py
compliance_sentinel/core/: __init__.py  compliance_agent.py  interfaces.py  validation.py
compliance_sentinel/deployment/: __init__.py  containerization.py  infrastructure.py
compliance_sentinel/engines/: __init__.py  dependency_scanner.py  feedback_engine.py  policy_engine.py
compliance_sentinel/git_integration/: __init__.py  git_hooks.py  security_gate.py
compliance_sentinel/hooks/: __init__.py  file_watcher.py  hook_manager.py  kiro_integration.py
compliance_sentinel/ide/: __init__.py  code_highlighter.py  contextual_help.py  feedback_formatter.py  progress_indicators.py
compliance_sentinel/ide_integration/: __init__.py  lsp_server.py  lsp_server_simple.py  vscode_extension.py
compliance_sentinel/integrations/: README.md  __init__.py  asana_integration.py  jira_integration.py  security_metrics.py  servicenow_integration.py  ticket_manager.py  trello_integration.py
compliance_sentinel/logging/: environment_logger.py
compliance_sentinel/mcp_server/: __init__.py  auth.py  endpoints.py  rate_limiter.py  server.py
compliance_sentinel/models/: __init__.py  analysis.py  config.py
compliance_sentinel/monitoring/: README.md  __init__.py  alert_engine.py  alert_manager.py  dashboard.py  dashboard_generator.py  datadog_integration.py  elasticsearch_integration.py  event_correlator.py  metrics_collector.py  monitoring_manager.py  monitoring_system.py  newrelic_integration.py  real_time_metrics.py  real_time_monitor.py  splunk_integration.py
compliance_sentinel/performance/: __init__.py  cache_manager.py  distributed_analyzer.py  incremental_analyzer.py  parallel_processor.py  queue_manager.py  resource_manager.py  streaming_processor.py
compliance_sentinel/providers/: compliance_provider.py  data_provider.py  fallback_manager.py  vulnerability_provider.py
compliance_sentinel/remediation/: __init__.py  auto_fixer.py  code_generator.py
compliance_sentinel/scanners/: __init__.py  dependency_scanner.py
compliance_sentinel/security/: __init__.py  audit_logger.py  code_anonymizer.py  data_retention.py  encrypted_storage.py  gdpr_compliance.py  secure_communication.py  security_test_suite.py  threat_model.py
compliance_sentinel/sync/: change_notification.py  data_synchronizer.py
compliance_sentinel/testing/: README.md  __init__.py  compliance_validator.py  comprehensive_test_runner.py  continuous_validation.py  integration_test_framework.py  ml_model_validator.py  performance_benchmarks.py  production_data_validator.py  security_penetration_tester.py  test_data_manager.py  vulnerability_test_suite.py
compliance_sentinel/threat_intelligence/: __init__.py  automated_response.py  feed_integrations.py  ioc_matcher.py  threat_enrichment.py  threat_hunting.py
compliance_sentinel/utils/: __init__.py  async_utils.py  cache.py  cache_invalidation.py  circuit_breaker.py  config_loader.py  error_handler.py  intelligent_cache.py  logging_config.py  performance.py  resilient_error_handler.py  timeout_handler.py
deployment/docker/: Dockerfile  (+1 more)
docs/: README.md  admin-guide.md  api-reference.md  troubleshooting.md  user-guide.md
examples/: free_api_demo.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml
kiro_hooks/: compliance-sentinel-file-save.json  compliance-sentinel-pre-commit.json
scripts/: deploy.sh  health-check.sh  install.ps1  install.sh  validate_deployment.py
terraform/: main.tf  variables.tf  vpc.tf
test_samples/: vulnerable_csharp.cs  vulnerable_java.java  vulnerable_javascript.js  vulnerable_php.php  vulnerable_python.py
tests/: README.md  __init__.py  conftest.py  test_analyzers.py  test_ci_cd_integration.py  test_compliance_agent.py  test_config_manager.py  test_dependency_scanner.py  test_enhanced_security_system.py  test_error_handling.py  test_feedback_engine.py  test_hook_manager.py  test_ide_integration.py  test_integration.py  test_ml_threat_detector.py  test_models.py  test_monitoring_integration.py  test_performance.py  test_performance_optimization.py  test_policy_engine.py  test_project_management_integration.py  test_suite_runner.py  test_threat_intelligence.py
(+65 files in other folders)
