[metadata]
name = compliance-sentinel
version = attr: compliance_sentinel.__version__
author = Compliance Sentinel Team
author_email = team@compliance-sentinel.dev
description = Proactive Security and Compliance Enforcement System for Development Workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/compliance-sentinel/compliance-sentinel
project_urls =
    Bug Reports = https://github.com/compliance-sentinel/compliance-sentinel/issues
    Source = https://github.com/compliance-sentinel/compliance-sentinel
    Documentation = https://compliance-sentinel.readthedocs.io/
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Quality Assurance
    Topic :: Security
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Environment :: Console
    Environment :: Web Environment

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False
install_requires =
    click>=8.0.0
    pydantic>=2.0.0
    pyyaml>=6.0.0
    aiohttp>=3.8.0
    asyncio-throttle>=1.0.0
    bandit>=1.7.0
    safety>=2.3.0
    semgrep>=1.0.0
    fastapi>=0.100.0
    uvicorn>=0.20.0
    python-multipart>=0.0.6
    jinja2>=3.1.0
    watchdog>=3.0.0
    psutil>=5.9.0
    cachetools>=5.3.0

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    tox>=4.0.0
docs =
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0
    myst-parser>=1.0.0
    sphinx-click>=4.4.0
performance =
    memory-profiler>=0.60.0
    line-profiler>=4.0.0
all =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    tox>=4.0.0
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0
    myst-parser>=1.0.0
    sphinx-click>=4.4.0
    memory-profiler>=0.60.0
    line-profiler>=4.0.0

[options.entry_points]
console_scripts =
    compliance-sentinel = compliance_sentinel.cli:cli
    cs = compliance_sentinel.cli:cli

compliance_sentinel.analyzers =
    bandit = compliance_sentinel.analyzers.bandit_analyzer:BanditAnalyzer
    semgrep = compliance_sentinel.analyzers.semgrep_analyzer:SemgrepAnalyzer

compliance_sentinel.scanners =
    safety = compliance_sentinel.scanners.dependency_scanner:DependencyScanner

[options.package_data]
compliance_sentinel =
    config/templates/*.yaml
    config/templates/*.json
    hooks/templates/*.json
    hooks/templates/*.py
    mcp_server/openapi.yaml
    data/*.json
    data/*.yaml

# Flake8 configuration
[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503, F403, F401
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude =
    .git,
    __pycache__,
    .tox,
    .eggs,
    *.egg,
    build,
    dist,
    .venv,
    venv

# Bandit configuration
[bandit]
exclude_dirs = tests,build,dist
skips = B101,B601

# Tool configuration for development
[tool:pytest]
minversion = 6.0
addopts = -ra -q --strict-markers --strict-config
testpaths = tests
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    performance: marks tests as performance tests
    security: marks tests as security tests
    load: marks tests as load tests